adição de comentários no index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <header id="topo">
+        <!-- Indicação de cabeçalho da página -->
         <nav>
+            <!-- Barra de navegação para acessar as diferentes sessões do site -->
             <ul>
                 <li><a href="#sobremim">Sobre mim</a></li>
                 <li><a href="#formacao">Formação e Idiomas</a></li>
@@ -20,12 +22,16 @@
         </nav>
     </header>
     <main class="main">
+        <!-- Indicação de início do conteúdo principal -->
         <section class="container">
+            <!-- Cada parte do site foi divida em sections para melhor separação dos conteúdos -->
             <h1 class="titulo" id="sobremim">Sobre mim</h1>
             <p class="paragrafo">Meu nome é Lucas dos Santos Silva e atualmente possuo 23 anos. Nasci na cidade de São Paulo - SP no dia 27 de junho de 2000. Me mudei para a cidade de Piracicaba no ano de 2013 junto de meus pais e irmão mais novo, onde resido até os dias de hoje.</p><br>
             <p class="paragrafo">Estou cursando minha segunda graduação, Análise e Desenvolvimento de Sistemas, pela UNINTER. Já tive certa experiência com estudos de programação ao fazer um curso técnico na ETEC de programação para internet. Mesmo assim, demorei para perceber que tinha paixão pela área. Hoje tenho certeza que gostaria de seguir carreira com isto, e tento manter o foco para estudar todos os dias e me preparar para o mercado de trabalho.</p><br>
             <p class="paragrafo">Quando não estou estudando, gosto de assistir vídeos no YouTube, jogar video game, escutar música, conversar e passar tempo com meus amigos e família e ir a academia. </p><br>
             <a href="#topo">Voltar ao topo da página</a>
+            <!-- Link que leva o usuário de volta ao topo da página, onde pode se acessar o menu de navegação -->
+            <!-- É apresentado ao final de cada section para facilitar a utilização -->
         </section>
         <section class="container">
             <h1 class="titulo" id="formacao">Formação e Idiomas</h1>
